--- a/views/index.jade
+++ b/views/index.jade
@@ -23,5 +23,15 @@ block content
     });
   
     wx.ready(function () {
-      console.log("Sucess")
+      wx.onMenuShareAppMessage({
+        title: '微信公众号测试', // 分享标题
+        desc: '这是一个测试的分享链接', // 分享描述
+        link: window.location.href, // 分享链接
+        success: function () { 
+            console.log("分享成功！");
+        },
+        cancel: function () { 
+            // 用户取消分享后执行的回调函数
+        }
+      });
     });
